--- a/style_carousel.css
+++ b/style_carousel.css
@@ -1,4 +1,3 @@
-
 section{
     background-color: #e7e5e4 ;
     padding-left: 190px;
@@ -8,7 +7,7 @@ section{
 .carousel-item {
     height: 450px;
     width: 200px;
-    border: solid 2px black;
+    border: solid 1px rgb(148, 146, 146);
 }
   
 .carousel-item img {
@@ -30,7 +29,7 @@ h5{
 }
 
 .carousel-indicators{
-    border: solid 1px black;
+    
     margin-bottom: 0px;
 }
 
@@ -41,3 +40,47 @@ p2{
     color: black;
 }
 
+.carousel-control-prev,
+.carousel-control-next {
+  top: 50%;
+  transform: translateY(-50%);
+  width: 50px;
+  height: 50px;
+}
+
+.carousel-control-next-icon {
+  position: absolute;
+  top: 480%;
+  left: 120%;
+  transform: translate(-50%, -50%);
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background: no-repeat center center;
+  background-size: 120% 120%;
+  border: solid 1px black;
+}
+
+.carousel-control-prev-icon {
+    position: absolute;
+    top: 480%;
+    left: -20%;
+    transform: translate(-50%, -50%);
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background: no-repeat center center;
+    background-size: 120% 120%;
+    border: solid 1px black;
+  }
+
+.carousel-control-prev, .carousel-control-next {
+    width: 50px;
+    height: 50px;
+    background-color: red;
+  }
+  
+  .carousel-control-prev-icon, .carousel-control-next-icon {
+    background-color: #242424;
+  }
+  
